--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "config": "^3.3.11",
-    "winston": "^3.13.0"
+    "winston": "^3.13.0",
+    "winston-console-format": "^1.0.8"
   }
 }
