--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "config": "^3.3.11",
+    "typescript": "^5.4.3",
     "winston": "^3.13.0",
     "winston-console-format": "^1.0.8"
   },
