--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,12 +3,6 @@
         "lib": [ "es2015" ],
         "skipLibCheck": true
     },
-    "files": [
-        "logger/index.ts",
-        "util/sanitize.ts",
-        "app.ts",
-        "index.ts"
-    ],
-    "exclude": ["node_modules"],
-    "strict": true
+    "strict": true,
+    "types": ["node"]
 }
