Updated sanitize function and tsconfig

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,5 +4,7 @@
         "skipLibCheck": true
     },
     "strict": true,
-    "types": ["node"]
+    "types": ["node"],
+    "noImplicitAny": true,
+    "strictNullCheks": true
 }
