--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
+    "start-dev": "npm run build -- -w",
+    "build": "tsc -p ./src",
     "test": "mocha './tests/*.test.js'"
   },
   "repository": {
