--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "Production quality Node.js application that integrates with Meta's API to get basic user information",
   "author": "RachNovo",
   "license": "ISC",
-  "type": "module",
   "scripts": {
     "start": "node src/index.js",
     "start-dev": "npm run build -- -w",
-    "build": "tsc -p ./src",
+    "build": "tsc -p ./src && tsc -p ./tests/tsconfig.tests.json",
     "test": "mocha './tests/*.test.js'"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/RachNovo/Doodle-Dash.git"
   },
+  "type": "module",
   "homepage": "https://github.com/RachNovo/Doodle-Dash#readme",
   "dependencies": {
     "axios": "^1.6.8",
@@ -24,7 +24,12 @@
     "winston-console-format": "^1.0.8"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.14",
+    "@types/config": "^3.3.4",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^20.12.3",
+    "@types/sinon": "^17.0.3",
+    "@types/sinon-chai": "^3.2.12",
     "chai": "^5.1.0",
     "mocha": "^10.4.0",
     "sinon": "^17.0.1",
